[project]
name = "twitter-telegram-bot"
version = "1.0.0"
description = "A powerful bot that monitors Twitter/X accounts and automatically forwards new tweets to Telegram channels"
authors = ["theabhishekdev <theabhishekdev@users.noreply.github.com>"]
requires-python = ">=3.11"
dependencies = [
    "flask>=3.1.2",
    "python-telegram-bot>=22.4",
    "requests>=2.32.5",
    "telegram>=0.0.1",
]
